--- a/assets/styles/_content-typography.scss
+++ b/assets/styles/_content-typography.scss
@@ -1,5 +1,8 @@
 .content-typography {
   @apply prose md:prose-xl;
+  @apply max-w-none;
+  @apply prose prose-xl;
+  @apply text-gray-600 dark:text-gray-300;
 
   /**
   * -----------------------------------
@@ -12,7 +15,7 @@
   h4,
   h5,
   h6 {
-    @apply text-gray-900 dark:text-gray-200;
+    @apply text-gray-900 dark:text-gray-100 font-extrabold;
   }
 
   /**
