:mag: article details page seo meta tags

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -10,7 +10,7 @@
     @apply bg-white dark:bg-blueGray-900;
   }
   a {
-    @apply text-green-500;
+    @apply text-primary;
   }
 
   *::selection {
