--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -6,8 +6,8 @@
   body {
     @apply font-KohinoorBangla;
     // text-gray-700 dark:text-gray-300
-    @apply text-gray-700 dark:text-blueGray-300;
-    @apply bg-white dark:bg-blueGray-900;
+    @apply text-gray-700 dark:text-slate-300;
+    @apply bg-white dark:bg-slate-900;
   }
   a {
     @apply text-primary;
