--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -3,100 +3,100 @@
 @tailwind utilities;
 
 @layer base {
-  body {
-    @apply font-KohinoorBangla;
-    @apply text-dark;
-    @apply bg-white dark:bg-slate-900;
-  }
-  a {
-    @apply text-primary;
-  }
+    body {
+        @apply font-KohinoorBangla;
+        @apply text-dark;
+        @apply bg-white dark:bg-slate-900;
+    }
+    a {
+        @apply text-primary;
+    }
 
-  *::selection {
-    @apply bg-primary text-gray-800;
-  }
-  ::-webkit-scrollbar {
-    width: 3px;
-  }
+    *::selection {
+        @apply bg-primary text-gray-800;
+    }
+    ::-webkit-scrollbar {
+        width: 3px;
+    }
 
-  ::-webkit-scrollbar-track {
-    @apply bg-transparent;
-  }
+    ::-webkit-scrollbar-track {
+        @apply bg-transparent;
+    }
 
-  ::-webkit-scrollbar-thumb {
-    @apply bg-gray-600 rounded-lg;
-  }
+    ::-webkit-scrollbar-thumb {
+        @apply bg-gray-600 rounded-lg;
+    }
 }
 
 @layer utilities {
-  .wrapper {
-    max-width: 1300px;
-    width: 98%;
-    margin: auto;
-    position: relative;
-  }
-
-  // ### Theme-------------------------
-  .app-border-color {
-    @apply border-gray-200 dark:border-gray-700;
-  }
-  .app-icon-color {
-  }
-
-  .app-text-color {
-  }
-
-  // .app-button{
-  //   @apply
-  // }
-
-  .text-dark {
-    @apply text-slate-900 dark:text-slate-200;
-  }
-  .text-dark-secondary {
-    @apply text-slate-600 dark:text-slate-300;
-  }
-  .text-dark-tertiary {
-    @apply text-slate-400 dark:text-gray-600;
-  }
-
-  .bg-dark {
-    @apply bg-gray-900 dark:bg-gray-200;
-  }
-  .bg-dark-secondary {
-    @apply bg-gray-600 dark:bg-gray-300;
-  }
-  .bg-dark-tertiary {
-    @apply bg-gray-100 dark:bg-gray-600;
-  }
-
-  .debug {
-    position: relative;
-    &::before {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      border: 5px solid transparent;
-      animation: blink 1000ms;
-      animation-iteration-count: infinite;
+    .wrapper {
+        max-width: 1300px;
+        width: 98%;
+        margin: auto;
+        position: relative;
     }
-  }
+
+    // ### Theme-------------------------
+    .app-border-color {
+        @apply border-slate-200 dark:border-slate-600;
+    }
+    .app-icon-color {
+    }
+
+    .app-text-color {
+    }
+
+    // .app-button{
+    //   @apply
+    // }
+
+    .text-dark {
+        @apply text-slate-900 dark:text-slate-200;
+    }
+    .text-dark-secondary {
+        @apply text-slate-600 dark:text-slate-300;
+    }
+    .text-dark-tertiary {
+        @apply text-slate-400 dark:text-gray-600;
+    }
+
+    .bg-dark {
+        @apply bg-gray-900 dark:bg-gray-200;
+    }
+    .bg-dark-secondary {
+        @apply bg-gray-600 dark:bg-gray-300;
+    }
+    .bg-dark-tertiary {
+        @apply bg-gray-100 dark:bg-gray-600;
+    }
+
+    .debug {
+        position: relative;
+        &::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            border: 5px solid transparent;
+            animation: blink 1000ms;
+            animation-iteration-count: infinite;
+        }
+    }
 }
 
 @keyframes blink {
-  50% {
-    border-color: #ff0000;
-  }
+    50% {
+        border-color: #ff0000;
+    }
 }
 
 .swal-footer {
-  background-color: rgb(245, 248, 250);
-  margin-top: 32px;
-  border-top: 1px solid #e9eef1;
-  overflow: hidden;
+    background-color: rgb(245, 248, 250);
+    margin-top: 32px;
+    border-top: 1px solid #e9eef1;
+    overflow: hidden;
 }
 @import "base";
 @import "content-typography";
@@ -109,9 +109,9 @@
 @import "theme";
 
 .top-full {
-  top: 100%;
+    top: 100%;
 }
 
 .ce-block--selected .ce-block__content {
-  @apply dark:bg-gray-800;
+    @apply dark:bg-gray-800;
 }
