--- a/assets/styles/_content-typography.scss
+++ b/assets/styles/_content-typography.scss
@@ -1,156 +1,9 @@
 .content-typography {
-  @apply prose md:prose-xl;
-  @apply max-w-none;
-  @apply prose prose-xl;
-  @apply text-gray-600 dark:text-gray-300;
-
-  /**
-  * -----------------------------------
-  *   Heading
-  * -----------------------------------
-  */
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    @apply text-gray-900 dark:text-gray-100 font-extrabold;
-    @apply flex items-center space-x-2;
-  }
-
-  /**
-  * -----------------------------------
-  *   Block quote
-  * -----------------------------------
-  */
-  blockquote {
-    @apply text-gray-700 ml-0 bg-gray-100 border-l-2 border-primary rounded py-2;
-
-    @apply text-xl py-1;
-    @media (min-width: 768px) {
-      @apply text-lg;
-    }
-
-    &.warning {
-      @apply border-yellow-300 bg-yellow-50;
-    }
-
-    .quotation {
-      @apply m-0 not-italic;
-    }
-    .author {
-      @apply not-italic font-bold m-0;
-    }
-  }
-
-  // Sttrong
-  strong {
-    @apply text-gray-900 dark:text-gray-200;
-  }
-
-  a {
-    @apply text-gray-900 dark:text-gray-200;
-  }
-
-  /**
-  * -----------------------------------
-  *   Mark
-  * -----------------------------------
-  */
-  mark {
-    @apply bg-yellow-200 px-1 rounded;
-    & > a {
-      color: #333 !important;
-    }
-  }
-
-  .techdiary-embed {
-    @apply aspect-w-16 aspect-h-9 rounded-md;
-  }
-
-  // syntax highliter
-  .hljs {
-    @apply rounded-md my-5;
-    &:first-child {
-      @apply mt-0;
-    }
-
-    &:last-child {
-      @apply mb-0;
-    }
-  }
-
-  code.inline-code {
-    &::before,
-    &::after {
-      content: "";
-    }
-
-    @apply bg-gray-700 px-3 text-white shadow-lg;
-  }
-
-  figure {
-    figcaption {
-      @apply text-sm text-gray-600 dark:text-gray-200 italic text-center mt-2;
-    }
-
-    img {
-      @apply mx-auto;
-    }
-
-    @media (min-width: 768px) {
-      &.image--stretched {
-        position: relative;
-        margin-left: calc(50% - 32vw);
-        margin-right: calc(50% - 32vw);
-      }
-    }
-  }
-}
-
-.todo {
-  list-style: none !important;
-
-  &__item {
-    @apply flex space-x-2 items-center mb-0;
-
-    &::before {
-      width: 0 !important;
-      height: 0 !important;
-    }
-  }
-
-  &__text {
-    margin-bottom: 0 !important;
-  }
-
-  &__state {
-    width: 20px;
-    height: 20px;
-    background-color: #dfe2e5;
-    border-radius: 100%;
-    margin-right: 6px;
-    position: relative;
-
-    margin-top: 0 !important;
-
-    &--checked {
-      background-color: #58d4e1;
-      &::after {
-        position: absolute;
-        top: 6px;
-        left: 5px;
-        width: 9px;
-        height: 4px;
-        border: 2px solid #fff;
-        border-top: none;
-        border-right: none;
-        background: transparent;
-        content: "";
-        opacity: 1;
-        transform: rotate(-45deg);
-      }
-    }
-  }
+    @apply prose md:prose-xl prose-slate dark:prose-invert;
+    @apply max-w-none;
+    @apply prose-headings:font-semibold;
+    @apply prose-code:p-0;
+    @apply prose-a:inline-block;
+    @apply prose-p:p-0;
+    @apply prose-img:inline-block;
 }
