--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -29,6 +29,10 @@
 }
 
 @layer utilities {
+    .text-gradient {
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
     .wrapper {
         max-width: 1300px;
         width: 98%;
