content typography optimized for phone

--- a/assets/styles/_content-typography.scss
+++ b/assets/styles/_content-typography.scss
@@ -1,16 +1,18 @@
 .content-typography {
     @apply prose md:prose-xl prose-slate dark:prose-invert;
     @apply max-w-none;
-    @apply prose-headings:font-semibold;
+
     @apply prose-code:p-0;
     @apply prose-a:inline-block;
     @apply prose-p:p-0;
     @apply prose-img:inline-block;
 
-    @apply prose-h1:text-4xl;
-    @apply prose-h2:text-3xl;
-    @apply prose-h3:text-2xl;
-    @apply prose-h4:text-xl;
+    @apply prose-headings:font-semibold;
+
+    @apply prose-h1:text-xl md:prose-h1:text-2xl;
+    @apply prose-h2:text-lg md:prose-h2:text-2xl;
+    @apply prose-h3:text-base md:prose-h3:text-xl;
+    @apply prose-h4:text-base md:prose-h4:text-xl;
 
     iframe {
         @apply w-full aspect-[16/9];
@@ -18,5 +20,6 @@
 
     .table-of-contents {
         @apply bg-slate-100 py-2 dark:bg-slate-700 prose-sm md:prose-base;
+        @apply mb-4;
     }
 }
