remove contst banner

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer base {
+    html {
+        @apply scroll-smooth;
+    }
     body {
         @apply font-KohinoorBangla;
         @apply text-dark;
